Update on deprecated functions